# init-project

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/core/: config.py  db.py
